basic pl1 syntax

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "callback": "cpp",
-        "image": "cpp"
+        "image": "cpp",
+        "program": "cpp"
     }
 }
